# tsr-tools

./: Cargo.toml
count/: Cargo.toml
count/src/: lib.rs  main.rs
count/tests/: integration.rs
count/tests/data/: test.txt
hello/src/: lib.rs  main.rs
logbook/: Cargo.toml  README.md
logbook/src/: lib.rs  main.rs
memo/: Cargo.toml
memo/src/: lib.rs  main.rs
slim/: Cargo.toml
slim/src/: lib.rs  main.rs
slim/tests/data/proj_2/: Cargo.toml
slim/tests/data/proj_3/: Cargo.toml
timer/: Cargo.toml
timer/src/: lib.rs  main.rs
weather/: Cargo.toml
weather/src/: lib.rs  main.rs
weather/tests/data/: ws.json
