[package]
name = "logbook"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = """
Record observations in a logbook file, or list previous observations.
"""
keywords = ["cli", "utility", "text"]
categories = ["command-line-utilities"]
repository = "https://github.com/wolves/tsr-tools/logbook"

[dependencies]
anyhow = "1.0.100"

[dev-dependencies]
tempfile = "3.23.0"
