[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
reqwest = { version = "0.12.28", features = ["blocking"] }
serde_json = "1.0.148"
url = "2.5.7"

[dev-dependencies]
http = "1.4.0"
httpmock = "0.8.2"
